--- a/Spaceshooter/Spaceshooter.vcxproj
+++ b/Spaceshooter/Spaceshooter.vcxproj
@@ -91,6 +91,9 @@
     <ClInclude Include="c_enemy.h" />
     <ClInclude Include="c_player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
